cmake_minimum_required(VERSION 3.5)
set(Project_name 500dsalg_binary)

set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
set (PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

project(${Project_name})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(1_find_pair_sum 1_find_pair_sum.c)
add_executable(16_eqidx_of_array 16_eqidx_of_array.c)
add_executable(15_rearrange_array 15_rearrange_array.c)
add_executable(14_shuffle_array 14_shuffle_array.c)
add_executable(13_find_max_product 13_find_max_product.c)
#add_executable(6_remove_duplicate 6_remove_duplicate.c)
#add_executable(7_move_front_node 7_move_front_node.c)
#add_executable(8_move_even_node 8_move_even_node.c)
#add_executable(9_split_link_list 9_split_link_list.c)
#add_executable(10_merge_alt_node 10_merge_alt_node.c)
#add_executable(11_merge_2sort_list 11_merge_2sort_list.c)
#add_executable(12_print_power_subset 12_print_power_subset.c)
#add_executable(13_divide_2int 13_divide_2int.c)
#add_executable(14_adj_bits_are_set 14_adj_bits_are_set.c)
#add_executable(15_find_2_dup_num 15_find_2_dup_num.c)
#add_executable(16_miss_dup_nums 16_miss_dup_nums.c)
#add_executable(17_check_power8 17_check_power8.c)
#add_executable(18_circular_shift_bim 18_circular_shift_bim.c)
#add_executable(19_multi_divide_problem 19_multi_divide_problem.c)
#add_executable(20_power_func 20_power_func.c)
#add_executable(21_square_wo_multi 21_square_wo_multi.c)
#add_executable(22_find_odd_occur 22_find_odd_occur.c)