cmake_minimum_required(VERSION 3.0)
set(Project_name 500dsalg_binary)

set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
set (PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

project(${Project_name})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(1_multi_16bit_int 1_multi_16bit_int.c)
add_executable(2_round_next_pw2 2_round_next_pw2.c)
add_executable(3_round_pre_pw2 3_round_pre_pw2.c)
add_executable(4_swap_ind_bits 4_swap_ind_bits.c)
add_executable(5_check_pw4 5_check_pw4.c)
add_executable(6_rev_bits 6_rev_bits.c)
add_executable(7_find_odd_occur_elm 7_find_odd_occur_elm.c)
add_executable(8_find_2odd_elm 8_find_2odd_elm.c)
add_executable(9_swap_2_bit 9_swap_2_bit.c)
add_executable(10_binary_addition 10_binary_addition.c)
add_executable(11_swap_adjacent_bit 11_swap_adjacent_bit.c)
add_executable(12_print_power_subset 12_print_power_subset.c)
add_executable(13_divide_2int 13_divide_2int.c)
add_executable(14_adj_bits_are_set 14_adj_bits_are_set.c)
add_executable(15_find_2_dup_num 15_find_2_dup_num.c)
add_executable(16_miss_dup_nums 16_miss_dup_nums.c)
add_executable(17_check_power8 17_check_power8.c)
add_executable(18_circular_shift_bim 18_circular_shift_bim.c)
add_executable(19_multi_divide_problem 19_multi_divide_problem.c)
add_executable(20_power_func 20_power_func.c)
add_executable(21_square_wo_multi 21_square_wo_multi.c)
add_executable(22_find_odd_occur 22_find_odd_occur.c)